refactor(core): 优化项目命名及文案，调整代码格式与依赖
- 将项目名称由“一键TG频道助手”改为“Telegram Clipper - TG 剪藏”
- 更新 README.md 中的介绍和使用说明文案，增强表达清晰度
- 统一扩展菜单项名称格式，增加空行提升可读性
- 优化 Vue 组件中环境变量和异步调用的代码格式，提升代码整洁度
- 删除无用的 Python 构建脚本及相关 package.json 配置
- 规范 tsconfig.json 文件格式与注释
- 更新 wxt.config.ts 中 manifest 名称和描述，保证与文案一致
- 调整 package.json 中部分脚本命令，提高构建流程一致性

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,17 +4,27 @@
     "moduleResolution": "bundler",
     "target": "ESNext",
     "module": "ESNext",
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ESNext",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "jsx": "preserve",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "types": ["chrome", "node", "wxt/client"],
+    "types": [
+      "chrome",
+      "node",
+      "wxt/client"
+    ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": [
+        "./*"
+      ]
     }
   },
   "include": [
