--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wxt-plugin-template",
+  "name": "telegram-clipper",
   "description": "manifest.json description",
   "private": true,
   "version": "0.0.1",
@@ -8,13 +8,12 @@
     "dev": "wxt",
     "dev:firefox": "wxt -b firefox",
     "build": "wxt build",
-    "py": "py scripts/build.py",
     "build:firefox": "wxt build -b firefox",
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "vue-tsc --noEmit",
     "postinstall": "wxt prepare",
-    "publish": "wxt build && wxt zip && wxt zip -b firefox && py scripts/build.py",
+    "publish": "wxt build && wxt zip && wxt zip -b firefox",
     "rf": "rimraf node_modules"
   },
   "dependencies": {
