refactor(ui): 优化编辑页面和统一 UI 风格
- 修改编辑页面标题栏样式，使用 Telegram 蓝色主题
- 取消内容编辑中“来源”开关，始终包含来源信息
- 优化文本框及按钮样式，调整配色和字体大小
- 替换编辑页面保存按钮文案及图标，增加视觉引导
- 统一弹出页面及后台页面的标题文字为“Telegram Clipper - TG 剪藏”
- 移除多余的依赖和组件库导入，简化构建配置
- 更新 README，添加图标并优化项目说明
- 调整环境变量示例文件，去除无用内容
- 升级版本号至 0.0.2，清理 package.json 依赖列表

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "telegram-clipper",
   "description": "manifest.json description",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "wxt",
@@ -17,20 +17,13 @@
     "rf": "rimraf node_modules"
   },
   "dependencies": {
-    "@arco-themes/vue-indigo-sky": "^0.0.1",
-    "element-plus": "^2.9.1",
-    "html2canvas": "^1.4.1",
-    "jquery": "^3.7.1",
-    "marked": "^14.1.1",
-    "pangu": "^4.0.7",
     "publish": "^0.6.0",
+    "rimraf": "^6.1.2",
     "vue": "^3.5.12",
-    "webdav": "^5.7.1",
     "webext-dynamic-content-scripts": "^10.0.3",
     "webext-permission-toggle": "^5.0.1"
   },
   "devDependencies": {
-    "@arco-design/web-vue": "^2.56.3",
     "@types/chrome": "^0.0.280",
     "@vitejs/plugin-vue": "^5.1.2",
     "@wxt-dev/module-vue": "^1.0.1",
