--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -21,6 +21,13 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Build and package extensions
+      if: env.create_release == 'true'
+      run: |
+        npm run build
+        npm run zip
+        npm run zip:firefox
+
     - name: Get package.json version
       id: get_version
       run: echo "PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
@@ -54,6 +61,7 @@ jobs:
         使用方法:  
         - **Chrome / Edge / Arc / Brave**：[Chrome Web Store](http://github.com/anghunk/telegram-clipper)
         
-        发布于：$CURRENT_DATE"
+        发布于：$CURRENT_DATE" \
+        .output/*.zip
       env:
         GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
